--- a/DestoPesto/DestoPesto.Android/Properties/AndroidManifest.xml
+++ b/DestoPesto/DestoPesto.Android/Properties/AndroidManifest.xml
@@ -22,6 +22,8 @@
 				<category android:name="${applicationId}" />
 			</intent-filter>
 		</receiver>
+		
+
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
@@ -32,6 +34,7 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
 	<uses-permission android:name="android.permission.INTERNET" />
